# loglife

./: .cursorrules  .gitattributes  .gitignore  LICENSE  Makefile  README.md  changes.txt  mkdocs.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  remote-start.sh  remote-start_complex.sh  remote-stop.sh  remote-stop_complex.sh  requirements.txt  run.sh  test-file.txt
backend/: .env  app.py  config.py  journal.json  log.txt  logic.py  main.py  pyproject.toml  storage.py
backend/app/: __init__.py  factory.py
backend/app/config/: __init__.py  api.py  logging.py  messages.py  paths.py  secrets.py  settings.py
backend/app/db/: __init__.py  client.py  rows.py  sqlite.py
backend/app/db/CRUD/user_goals/: get_user_goals.py
backend/app/db/data_access/: __init__.py  audio_journal.py  user.py
backend/app/db/data_access/user_goals/: __init__.py  get_user_goals.py
backend/app/db/operations/: __init__.py  audio_journal_entries.py  goal_ratings.py  goal_reminders.py  goals.py  ratings.py  referrals.py  user_goals.py  user_states.py  users.py
backend/app/db/tables/: __init__.py  audio_journal.py  goals.py  ratings.py  referrals.py  reminders.py  user_states.py  users.py
backend/app/helpers/: __init__.py  contact_detector.py  queue.py  referral_tracker.py  reminder_service.py  state_manager.py  time_parser.py  timezone_helper.py  user_timezone.py  whatsapp_sender.py
backend/app/helpers/api/: __init__.py  whatsapp_api.py
backend/app/helpers/audio/: __init__.py  summarize_transcript.py  transcribe_audio.py
backend/app/helpers/audio/journaling/: __init__.py  get_journal_goal_id.py  process_journal.py  process_journaling.py  summarize_transcript.py  transcript_to_base64.py
backend/app/helpers/sender/: __init__.py  emulator_sender.py  send_message.py  whatsapp_sender.py
backend/app/helpers/services/: __init__.py  reminder.py
backend/app/helpers/text/: __init__.py  goal.py  rate.py  reminder_time.py  week.py
backend/app/helpers/vcard/: __init__.py  vcard.py
backend/app/helpers/webhook/: __init__.py  get_timezone.py  response_builder.py
backend/app/logic/: __init__.py  command_parser.py  logic.py  process_audio.py  process_message.py  process_text.py  process_vcard.py  reminder.py  text_handlers.py
backend/app/logic/audio/: __init__.py  processor.py  transcribe_audio.py
backend/app/logic/audio/journaling/: summarize_transcript.py  transcript_to_base64.py
backend/app/logic/helpers/: add_goal.py  format_goals.py  format_week_summary.py  handle_goal_ratings.py  look_back_summary.py  rate_individual_goal.py  show_help.py  summarize_transcript.py  transcribe_audio.py
backend/app/logic/text/: __init__.py  handlers.py  processor.py  reminder_time.py  week.py
backend/app/logic/vcard/: __init__.py  processor.py
backend/app/routes/: __init__.py  emulator.py  events.py  web.py  webhook.py
backend/app/routes/emulator/: __init__.py  routes.py
backend/app/routes/webhook/: __init__.py  routes.py  utils.py
backend/app/services/: __init__.py  reminder.py
backend/app/services/reminder/: __init__.py  reminder.py  utils.py  worker.py
backend/app/services/sender/: __init__.py  service.py
backend/app/templates/: index.html
backend/app/utils/: api_config.py  config.py  date_utils.py  goal_utils.py  messages.py
backend/cron/: reminder.py
backend/cron/temp/: set_reminder_for_goal.py
backend/db/: life_bot.db  schema.sql
backend/docs/: postman-testing.md
backend/goal_bot.egg-info/: PKG-INFO  SOURCES.txt
backend/templates/: emulator.html
backend/tests/: conftest.py
backend/tests/db/operations/: __init__.py  test_audio_journal_entries.py  test_goal_ratings.py  test_goal_reminders.py  test_referrals.py  test_user_goals.py  test_user_states.py  test_users.py
backend/tests/db/tables/: test_audio_journal_entries.py  test_goal_ratings.py  test_goal_reminders.py  test_referrals.py  test_user_goals.py  test_user_states.py  test_users.py
backend/tests/db_operations/: test_audio_journal_entries.py  test_goal_ratings.py  test_goal_reminders.py  test_referrals.py  test_user_goals.py  test_user_states.py  test_users.py
backend/tests/e2e/: test_audio_journaling.py  test_contact_and_referral.py  test_message_flow.py  test_reminders.py
backend/tests/helpers/: __init__.py
backend/tests/helpers/audio/: __init__.py  audio_bytes.txt  test_get_journal_goal_id.py  test_process_journal.py  test_summarize_transcript.py  test_transcribe_audio.py  test_transcript_to_base64.py
backend/tests/helpers/audio/journaling/: __init__.py  test_get_journal_goal_id.py  test_process_journal.py  test_summarize_transcript.py  test_transcript_to_base64.py
backend/tests/helpers/sender/: __init__.py  test_emulator_sender.py  test_whatsapp_sender.py
backend/tests/helpers/services/: __init__.py  test_reminder.py  test_reminder_helper.py
backend/tests/helpers/text/: __init__.py  test_goal.py  test_rate.py  test_reminder_time.py  test_week.py
backend/tests/helpers/vcard/: __init__.py  test_vcard.py
backend/tests/helpers/webhook/: __init__.py  test_get_timezone.py
backend/tests/integration/: __init__.py  test_conversation_flow.py
backend/tests/logic/: __init__.py  test_process_audio.py  test_process_text.py  test_process_text_branches.py  test_process_text_handlers.py  test_process_vcard.py  test_reminder.py
backend/tests/routes/: test_webhook.py
backend/tests/routes/webhook/: __init__.py  test_webhook_utils.py
backend/tests/services/: test_reminder.py  test_reminder_service.py
backend/tests/services/reminder/: __init__.py  test_reminder_utils.py  test_worker.py
backend/tests/services/sender/: __init__.py  test_sender.py
blog/: cumulative_impact_on_habit_change.md
call_prompts/: goal_setup.json  temptation_support.json
diagrams/: Untitled Diagram.drawio  arch.drawio  backend_code_arch.drawio  system_architecture.drawio  user_flow.drawio
docs/: ai-rules.mdx  architecture.mdx  audio-provider.mdx  backend.md  configuration.mdx  contributing-docs.mdx  dashboard.mdx  development.mdx  docs.json  index.md  index.mdx  mkdocs.yml  multi-user.mdx  (+11 more)
(+503 files in other folders)
