[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "goal_bot"
version = "0.1.0"
requires-python = ">=3.11"
description = "General Bot Package for Goal Tracking"
authors = [{name = "Your Name"}]
dependencies = [
    "flask>=3.1.2",
    "phonenumbers>=9.0.17",
    "requests>=2.32.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.3",
    "mkdocs-glightbox>=0.5.2",
    "mkdocs-material>=9.6.22",
    "sqlite-web>=0.6.5",
    "tzdata>=2025.2",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
pythonpath = ["backend"]

# Package discovery configuration
# Exclude 'db' directory to avoid setuptools error about multiple top-level packages
# Only include 'app' directory as the main application package
[tool.setuptools.packages.find]
include = ["backend.app*"]
exclude = ["backend.app.db*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203", # 1 blank line required before class docstring (incompatible with D211)
    "D213", # Multi-line docstring summary should start at the second line (incompatible with D212)
    "COM812", # Trailing comma missing (conflicts with formatter)
]