[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "goal_bot"
version = "0.1.0"
requires-python = ">=3.11"
description = "General Bot Package for Goal Tracking"
authors = [{name = "Your Name"}]
dependencies = [
    # Application dependencies
    "phonenumbers>=9.0.17",
    # ChatIO dependencies
    "flask>=3.1.2",
    "requests>=2.32.5",
]

[project.optional-dependencies]
dev = [
    # Linting & formatting
    "ruff>=0.14.3",
    
    # Docs
    "mkdocs-material>=9.6.22",  # Theme
    "mkdocs-glightbox>=0.5.2",  # "Click image to zoom" feature
    "mkdocstrings[python]>=0.28.0", # Auto-doc from docstrings
    
    # Cross-platform
    "tzdata>=2025.2",  # Timezone data (needed for timezones in Windows)
    
    # Tests
    "pytest>=8.4.2",
    "sqlite-web>=0.6.5",  # Web database
]

[tool.pytest.ini_options]
pythonpath = ["backend"]

# Package discovery configuration
# Exclude 'db' directory to avoid setuptools error about multiple top-level packages
# Only include 'app' directory as the main application package
[tool.setuptools.packages.find]
include = ["backend.app*"]
exclude = ["backend.app.db*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203", # 1 blank line required before class docstring (incompatible with D211)
    "D213", # Multi-line docstring summary should start at the second line (incompatible with D212)
    "COM812", # Trailing comma missing (conflicts with formatter)
]

[tool.ruff.lint.per-file-ignores]
"backend/tests/**/*.py" = [
    "S101",    # Use of assert detected (standard in pytest)
    "PLR2004", # Magic value used in comparison (acceptable in tests)
]
"backend/app/logic/process_text.py" = [
    "C901",    # Function too complex (command router with many branches)
    "PLR0911", # Too many return statements (command router)
    "PLR0912", # Too many branches (command router)
    "PLR0915", # Too many statements (command router)
]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
]
