[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loglife"
version = "0.1.0"
requires-python = ">=3.12"
description = "General Bot Package for Goal Tracking"
authors = [{name = "Your Name"}]
dependencies = [
    # Application dependencies
    "phonenumbers>=9.0.17",
    "python-dotenv>=1.0.1",
    
    # ChatIO dependencies
    "flask>=3.1.2",
    "requests>=2.32.5",
    
    # WebRTC for WhatsApp calls
    "aiortc>=1.7.0",
]

[project.optional-dependencies]
dev = [
    # Linting & formatting
    "ruff>=0.14.3",
    
    # Docs
    "mkdocs-material>=9.6.22",  # Theme
    "mkdocs-glightbox>=0.5.2",  # "Click image to zoom" feature
    "mkdocstrings[python]>=0.28.0", # Auto-doc from docstrings
    "mkdocs-mermaid-zoom>=0.1.0",  # Mermaid zoom support
    
    # Cross-platform
    "tzdata>=2025.2",  # Timezone data (needed for timezones in Windows)
    
    # Tests
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",  # Summaries of line coverage in tests 
    "sqlite-web>=0.6.6",  # Web database
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["loglife*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203", # 1 blank line required before class docstring (incompatible with D211)
    "D213", # Multi-line docstring summary should start at the second line (incompatible with D212)
    "COM812", # Trailing comma missing (conflicts with formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # Use of assert detected (standard in pytest)
    "PLR2004", # Magic value used in comparison (acceptable in tests)
]
"src/loglife/app/db/tables/*.py" = [
    "S608",    # Possible SQL injection vector through string-based query construction (whitelisted)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
]